--- a/api-rest/Dockerfile
+++ b/api-rest/Dockerfile
@@ -20,10 +20,6 @@ COPY package*.json ./
 COPY tsconfig.json ./
 COPY prisma ./prisma/
 COPY src ./src/
-COPY docker-entrypoint.sh ./
-
-# Torna o script executável
-RUN chmod +x docker-entrypoint.sh
 
 # Instala dependências
 RUN npm install
@@ -34,7 +30,19 @@ RUN npx prisma generate
 # Cria diretório para sessões
 RUN mkdir -p /app/auth_sessions
 
+# Cria script de entrypoint inline
+RUN echo '#!/bin/sh' > /app/docker-entrypoint.sh && \
+    echo 'set -e' >> /app/docker-entrypoint.sh && \
+    echo '' >> /app/docker-entrypoint.sh && \
+    echo 'echo "🚀 Executando migrations do Prisma..."' >> /app/docker-entrypoint.sh && \
+    echo 'npx prisma migrate deploy' >> /app/docker-entrypoint.sh && \
+    echo 'echo "✅ Migrations aplicadas com sucesso"' >> /app/docker-entrypoint.sh && \
+    echo '' >> /app/docker-entrypoint.sh && \
+    echo 'echo "🚀 Iniciando servidor..."' >> /app/docker-entrypoint.sh && \
+    echo 'exec npx ts-node src/server.ts' >> /app/docker-entrypoint.sh && \
+    chmod +x /app/docker-entrypoint.sh
+
 EXPOSE 3000
 
 # Roda com ts-node via entrypoint
-ENTRYPOINT ["./docker-entrypoint.sh"]
+ENTRYPOINT ["/app/docker-entrypoint.sh"]
